--- a/src/app/components/skills/damage-skill/damage-skill.component.html
+++ b/src/app/components/skills/damage-skill/damage-skill.component.html
@@ -6,7 +6,7 @@
   <md-expansion-panel *ngFor="let upgrade of skill.upgrades">
     <md-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</md-expansion-panel-header>
     <md-input-container>
-      <input mdInput placeholder="Damage" [(ngModel)]="upgrade.damage" type="number">
+      <input mdInput placeholder="Damage" [(ngModel)]="upgrade.damage" type="text" pattern="[+-=][0-9]+(\.[0-9]+)?">
       <span mdSuffix>damage</span>
     </md-input-container>
   </md-expansion-panel>
