--- a/src/app/components/skills/backpack-skill/backpack-skill.component.html
+++ b/src/app/components/skills/backpack-skill/backpack-skill.component.html
@@ -6,7 +6,7 @@
   <md-expansion-panel *ngFor="let upgrade of skill.upgrades">
     <md-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</md-expansion-panel-header>
     <md-input-container>
-      <input mdInput placeholder="Rows" [(ngModel)]="upgrade.rows" type="number">
+      <input mdInput placeholder="Rows" [(ngModel)]="upgrade.rows" type="text" pattern="[+-=][0-9]+">
       <span mdSuffix>rows</span>
     </md-input-container>
 
