--- a/src/app/components/skills/heal-skill/heal-skill.component.html
+++ b/src/app/components/skills/heal-skill/heal-skill.component.html
@@ -6,12 +6,13 @@
   <md-expansion-panel *ngFor="let upgrade of skill.upgrades">
     <md-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</md-expansion-panel-header>
     <md-input-container>
-      <input mdInput placeholder="Timer" [(ngModel)]="upgrade.timer" type="number">
+      <input mdInput placeholder="Timer" [(ngModel)]="upgrade.timer" type="text" pattern="[+-=][0-9]+?">
       <span mdSuffix>sec</span>
     </md-input-container>
 
     <md-input-container>
-      <input mdInput placeholder="Added Health" [(ngModel)]="upgrade.health" type="number">
+      <input mdInput placeholder="Added Health" [(ngModel)]="upgrade.health" type="text"
+             pattern="[+-=][0-9]+(\.[0-9]+)?">
       <span mdSuffix>health</span>
     </md-input-container>
   </md-expansion-panel>
