--- a/src/app/components/skills/ride-skill/ride-skill.component.html
+++ b/src/app/components/skills/ride-skill/ride-skill.component.html
@@ -6,10 +6,11 @@
   <md-expansion-panel *ngFor="let upgrade of skill.upgrades">
     <md-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</md-expansion-panel-header>
     <md-input-container>
-      <input mdInput placeholder="Speed" [(ngModel)]="upgrade.speed" type="number">
+      <input mdInput placeholder="Speed" [(ngModel)]="upgrade.speed" type="text" pattern="[+-=][0-9]+(\.[0-9]+)?">
     </md-input-container>
     <md-input-container>
-      <input mdInput placeholder="Jump Height" [(ngModel)]="upgrade.jumpHeight" type="number">
+      <input mdInput placeholder="Jump Height" [(ngModel)]="upgrade.jumpHeight" type="text"
+             pattern="[+-=][0-9]+(\.[0-9]+)?">
       <span mdSuffix>Blocks</span>
     </md-input-container>
     <div>
