--- a/src/app/components/skills/lightning-skill/lightning-skill.component.html
+++ b/src/app/components/skills/lightning-skill/lightning-skill.component.html
@@ -2,16 +2,55 @@
   <button md-raised-button (click)="addUpgrade()">Add Upgrade</button>
 </md-toolbar>
 
+<md-popover #chancePopover="mdPopover" x-position="after" y-position="below"
+            [overlapTrigger]="true" mdPopoverTrigger="click" [mdPopoverDelay]="400">
+  <md-card>
+    <md-card-content>
+      <p>The chance a hit will cause a lightning.<br>
+        Format: [+-=][number]<br>
+        Examples:<br>
+        +2<br>
+        -3<br>
+        =6
+      </p>
+    </md-card-content>
+  </md-card>
+</md-popover>
+<md-popover #damagePopover="mdPopover" x-position="after" y-position="below"
+            [overlapTrigger]="true" mdPopoverTrigger="click" [mdPopoverDelay]="400">
+  <md-card>
+    <md-card-content>
+      <p>The damage the lightning strike will cause.<br>
+        Format: [+-=][number]<br>
+        Examples:<br>
+        +2<br>
+        -3<br>
+        =6
+      </p>
+    </md-card-content>
+  </md-card>
+</md-popover>
+
 <div *ngIf="skill">
   <md-expansion-panel *ngFor="let upgrade of skill.upgrades">
     <md-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</md-expansion-panel-header>
-    <md-input-container>
-      <input mdInput placeholder="Chance" [(ngModel)]="upgrade.chance" type="text" pattern="[+-=][0-9]+(\.[0-9]+)?">
-      <span mdSuffix>%</span>
-    </md-input-container>
-    <md-input-container>
-      <input mdInput placeholder="Damage" [(ngModel)]="upgrade.damage" type="text" pattern="[+-=][0-9]+(\.[0-9]+)?">
-      <span mdSuffix>damage</span>
-    </md-input-container>
+    <div>
+      <md-input-container>
+        <input mdInput placeholder="Chance" [(ngModel)]="upgrade.chance" type="text" pattern="[+-=][0-9]+(\.[0-9]+)?">
+        <span mdSuffix>%</span>
+      </md-input-container>
+      <button md-icon-button [mdPopoverTriggerFor]="chancePopover">
+        <md-icon>info_outline</md-icon>
+      </button>
+    </div>
+    <div>
+      <md-input-container>
+        <input mdInput placeholder="Damage" [(ngModel)]="upgrade.damage" type="text" pattern="[+-=][0-9]+(\.[0-9]+)?">
+        <span mdSuffix>damage</span>
+      </md-input-container>
+      <button md-icon-button [mdPopoverTriggerFor]="damagePopover">
+        <md-icon>info_outline</md-icon>
+      </button>
+    </div>
   </md-expansion-panel>
 </div>
