--- a/src/app/components/elements/expansion/expansion-panel.scss
+++ b/src/app/components/elements/expansion/expansion-panel.scss
@@ -1,4 +1,4 @@
-@import '../../../../../node_modules/@angular/material/_theming';
+@import '~@angular/material/_theming';
 
 .mat-expansion-panel {
   @include mat-elevation-transition;
@@ -15,7 +15,7 @@
 }
 
 .mat-expansion-panel-body {
-  padding: 0 24px 16px;
+  padding: 16px 24px 16px;
 }
 
 .mat-action-row {
