--- a/src/app/components/skills/backpack-skill/backpack-skill.component.html
+++ b/src/app/components/skills/backpack-skill/backpack-skill.component.html
@@ -2,14 +2,33 @@
   <button md-raised-button (click)="addUpgrade()">Add Upgrade</button>
 </md-toolbar>
 
+<md-popover #rowsPopover="mdPopover" x-position="after" y-position="below"
+            [overlapTrigger]="true" mdPopoverTrigger="click" [mdPopoverDelay]="400">
+  <md-card>
+    <md-card-content>
+      <p>The number of rows the inventory will have.<br>
+        Format: [+-=][number]<br>
+        Examples:<br>
+        +2<br>
+        -3<br>
+        =6
+      </p>
+    </md-card-content>
+  </md-card>
+</md-popover>
+
 <div *ngIf="skill">
   <md-expansion-panel *ngFor="let upgrade of skill.upgrades">
     <md-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</md-expansion-panel-header>
-    <md-input-container>
-      <input mdInput placeholder="Rows" [(ngModel)]="upgrade.rows" type="text" pattern="[+-=][0-9]+">
-      <span mdSuffix>rows</span>
-    </md-input-container>
-
+    <div>
+      <md-input-container>
+        <input mdInput placeholder="Rows" [(ngModel)]="upgrade.rows" type="text" pattern="[+-=][0-9]+">
+        <span mdSuffix>rows</span>
+      </md-input-container>
+      <button md-icon-button [mdPopoverTriggerFor]="rowsPopover">
+        <md-icon>info_outline</md-icon>
+      </button>
+    </div>
     <div>
       <md-button-toggle-group [value]="upgrade.drop">
         <md-button-toggle [value]="true" mdTooltip="Activate">
