--- a/src/app/components/skills/ranged-skill/ranged-skill.component.html
+++ b/src/app/components/skills/ranged-skill/ranged-skill.component.html
@@ -2,26 +2,66 @@
   <button md-raised-button (click)="addUpgrade()">Add Upgrade</button>
 </md-toolbar>
 
+<md-popover #rangePopover="mdPopover" x-position="after" y-position="below"
+            [overlapTrigger]="true" mdPopoverTrigger="click" [mdPopoverDelay]="400">
+  <md-card>
+    <md-card-content>
+      <p>The range the pet will start shooting.<br>
+        Format: [+-=][number]<br>
+        Examples:<br>
+        +2<br>
+        -3<br>
+        =6
+      </p>
+    </md-card-content>
+  </md-card>
+</md-popover>
+<md-popover #ratePopover="mdPopover" x-position="after" y-position="below"
+            [overlapTrigger]="true" mdPopoverTrigger="click" [mdPopoverDelay]="400">
+  <md-card>
+    <md-card-content>
+      <p>The rate at which the pet will shot.<br>
+        Format: [+-=][number]<br>
+        Examples:<br>
+        +2<br>
+        -3<br>
+        =6
+      </p>
+    </md-card-content>
+  </md-card>
+</md-popover>
+
 <div *ngIf="skill">
   <md-expansion-panel *ngFor="let upgrade of skill.upgrades">
     <md-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</md-expansion-panel-header>
-    <md-input-container>
-      <input mdInput placeholder="Range" [(ngModel)]="upgrade.range" type="text" pattern="[+-=][0-9]+(\.[0-9]+)?">
-      <span mdSuffix>meters</span>
-    </md-input-container>
-
-    <md-input-container>
-      <input mdInput placeholder="Rate of fire" [(ngModel)]="upgrade.rate" type="text" pattern="[+-=][0-9]+(\.[0-9]+)?">
-      <span mdSuffix> x 50ms delay = shots/second</span>
-    </md-input-container>
-
-    <md-select placeholder="Projectile" [(ngModel)]="upgrade.projectile">
-      <md-option value="Arrow">Arrow</md-option>
-      <md-option value="Snowball">Snowball</md-option>
-      <md-option value="Fireball">Fireball</md-option>
-      <md-option value="LargeFireball">Large Fireball</md-option>
-      <md-option value="WitherSkull">Wither Skull</md-option>
-      <md-option value="Egg">Egg</md-option>
-    </md-select>
+    <div>
+      <md-input-container>
+        <input mdInput placeholder="Range" [(ngModel)]="upgrade.range" type="text" pattern="[+-=][0-9]+(\.[0-9]+)?">
+        <span mdSuffix>meters</span>
+      </md-input-container>
+      <button md-icon-button [mdPopoverTriggerFor]="rangePopover">
+        <md-icon>info_outline</md-icon>
+      </button>
+    </div>
+    <div>
+      <md-input-container>
+        <input mdInput placeholder="Rate of fire" [(ngModel)]="upgrade.rate" type="text"
+               pattern="[+-=][0-9]+(\.[0-9]+)?">
+        <span mdSuffix> x 50ms delay = shots/second</span>
+      </md-input-container>
+      <button md-icon-button [mdPopoverTriggerFor]="ratePopover">
+        <md-icon>info_outline</md-icon>
+      </button>
+    </div>
+    <div>
+      <md-select placeholder="Projectile" [(ngModel)]="upgrade.projectile">
+        <md-option value="Arrow">Arrow</md-option>
+        <md-option value="Snowball">Snowball</md-option>
+        <md-option value="Fireball">Fireball</md-option>
+        <md-option value="LargeFireball">Large Fireball</md-option>
+        <md-option value="WitherSkull">Wither Skull</md-option>
+        <md-option value="Egg">Egg</md-option>
+      </md-select>
+    </div>
   </md-expansion-panel>
 </div>
