--- a/src/app/components/skills/ride-skill/ride-skill.component.html
+++ b/src/app/components/skills/ride-skill/ride-skill.component.html
@@ -2,17 +2,56 @@
   <button md-raised-button (click)="addUpgrade()">Add Upgrade</button>
 </md-toolbar>
 
+<md-popover #speedPopover="mdPopover" x-position="after" y-position="below"
+            [overlapTrigger]="true" mdPopoverTrigger="click" [mdPopoverDelay]="400">
+  <md-card>
+    <md-card-content>
+      <p>The speed at which the owner can ride the pet.<br>
+        Format: [+-=][number]<br>
+        Examples:<br>
+        +2<br>
+        -3<br>
+        =6
+      </p>
+    </md-card-content>
+  </md-card>
+</md-popover>
+<md-popover #jumpHeightPopover="mdPopover" x-position="after" y-position="below"
+            [overlapTrigger]="true" mdPopoverTrigger="click" [mdPopoverDelay]="400">
+  <md-card>
+    <md-card-content>
+      <p>How high the pet can jump.<br>
+        Format: [+-=][number]<br>
+        Examples:<br>
+        +2<br>
+        -3<br>
+        =6
+      </p>
+    </md-card-content>
+  </md-card>
+</md-popover>
+
 <div *ngIf="skill">
   <md-expansion-panel *ngFor="let upgrade of skill.upgrades">
     <md-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</md-expansion-panel-header>
-    <md-input-container>
-      <input mdInput placeholder="Speed" [(ngModel)]="upgrade.speed" type="text" pattern="[+-=][0-9]+(\.[0-9]+)?">
-    </md-input-container>
-    <md-input-container>
-      <input mdInput placeholder="Jump Height" [(ngModel)]="upgrade.jumpHeight" type="text"
-             pattern="[+-=][0-9]+(\.[0-9]+)?">
-      <span mdSuffix>Blocks</span>
-    </md-input-container>
+    <div>
+      <md-input-container>
+        <input mdInput placeholder="Speed" [(ngModel)]="upgrade.speed" type="text" pattern="[+-=][0-9]+(\.[0-9]+)?">
+      </md-input-container>
+      <button md-icon-button [mdPopoverTriggerFor]="speedPopover">
+        <md-icon>info_outline</md-icon>
+      </button>
+    </div>
+    <div>
+      <md-input-container>
+        <input mdInput placeholder="Jump Height" [(ngModel)]="upgrade.jumpHeight" type="text"
+               pattern="[+-=][0-9]+(\.[0-9]+)?">
+        <span mdSuffix>Blocks</span>
+      </md-input-container>
+      <button md-icon-button [mdPopoverTriggerFor]="jumpHeightPopover">
+        <md-icon>info_outline</md-icon>
+      </button>
+    </div>
     <div>
       <md-button-toggle-group [value]="upgrade.canFly">
         <md-button-toggle [value]="true" mdTooltip="Activate">
