--- a/src/assets/styles/components/angular-material.scss
+++ b/src/assets/styles/components/angular-material.scss
@@ -1,5 +1,6 @@
 @import '~@angular/material/theming';
-@import "expansion/_expansion-theme";
+@import "elements/_expansion-theme";
+@import "elements/_popover-theme";
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
