--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -2,6 +2,7 @@
 
 /* custom styles */
 @import "components/scrollbar";
+@import "components/context";
 @import "components/minecraft";
 @import "components/app";
 @import "components/angular-material";
