renamed name to id and displayname to name

--- a/src/app/components/skilltree-list/skilltree-list.component.html
+++ b/src/app/components/skilltree-list/skilltree-list.component.html
@@ -21,9 +21,9 @@
 
       <img md-list-avatar src="assets/img/mobheads/All.png">
 
-      <h3 md-line> {{skilltree.displayName}} </h3>
+      <h3 md-line> {{skilltree.name}} </h3>
       <p md-line>
-        <span>{{skilltree.name}}</span>
+        <span>{{skilltree.id}}</span>
       </p>
     </md-list-item>
   </md-nav-list>
