add action/reducer for modifying skilltree info store skilltrees in an object instead of an array

--- a/src/app/components/skill-editor/skill-editor.component.html
+++ b/src/app/components/skill-editor/skill-editor.component.html
@@ -1,5 +1,5 @@
-<md-card>
-  <md-select placeholder="Select Skill" [(ngModel)]="selectedSkill" (change)="change()">
+<md-card *ngIf="selectedSkilltree$ | async as skilltree">
+  <md-select placeholder="Select Skill" [(ngModel)]="selectedSkill" (change)="switchSkill(skilltree)">
     <md-option *ngFor="let skill of skills" [value]="skill">
       <img [src]="'assets/img/skills/' +  skill.icon" class="mdl-chip__skill"> {{ skill.name }}
     </md-option>
