--- a/src/app/components/skill-editor-upgrade/skill-editor-upgrade.component.html
+++ b/src/app/components/skill-editor-upgrade/skill-editor-upgrade.component.html
@@ -1,20 +1,20 @@
-<app-backpack-skill *ngIf="skill == 'Backpack'"></app-backpack-skill>
-<app-beacon-skill *ngIf="skill == 'Beacon'"></app-beacon-skill>
-<app-behavior-skill *ngIf="skill == 'Behavior'"></app-behavior-skill>
-<app-control-skill *ngIf="skill == 'Control'"></app-control-skill>
-<app-damage-skill *ngIf="skill == 'Damage'"></app-damage-skill>
-<app-fire-skill *ngIf="skill == 'Fire'"></app-fire-skill>
-<app-heal-skill *ngIf="skill == 'Heal'"></app-heal-skill>
-<app-health-boost-skill *ngIf="skill == 'Health Boost'"></app-health-boost-skill>
-<app-knockback-skill *ngIf="skill == 'Knockback'"></app-knockback-skill>
-<app-lightning-skill *ngIf="skill == 'Lightning'"></app-lightning-skill>
-<app-pickup-skill *ngIf="skill == 'Pickup'"></app-pickup-skill>
-<app-poison-skill *ngIf="skill == 'Poison'"></app-poison-skill>
-<app-ranged-skill *ngIf="skill == 'Ranged'"></app-ranged-skill>
-<app-ride-skill *ngIf="skill == 'Ride'"></app-ride-skill>
-<app-shield-skill *ngIf="skill == 'Shield'"></app-shield-skill>
-<app-slow-skill *ngIf="skill == 'Slow'"></app-slow-skill>
-<app-sprint-skill *ngIf="skill == 'Sprint'"></app-sprint-skill>
-<app-stomp-skill *ngIf="skill == 'Stomp'"></app-stomp-skill>
-<app-thorns-skill *ngIf="skill == 'Thorns'"></app-thorns-skill>
-<app-wither-skill *ngIf="skill == 'Wither'"></app-wither-skill>
+<app-backpack-skill *ngIf="(selectedSkill$ | async).name == 'Backpack'"></app-backpack-skill>
+<app-beacon-skill *ngIf="(selectedSkill$ | async).name == 'Beacon'"></app-beacon-skill>
+<app-behavior-skill *ngIf="(selectedSkill$ | async).name == 'Behavior'"></app-behavior-skill>
+<app-control-skill *ngIf="(selectedSkill$ | async).name == 'Control'"></app-control-skill>
+<app-damage-skill *ngIf="(selectedSkill$ | async).name == 'Damage'"></app-damage-skill>
+<app-fire-skill *ngIf="(selectedSkill$ | async).name == 'Fire'"></app-fire-skill>
+<app-heal-skill *ngIf="(selectedSkill$ | async).name == 'Heal'"></app-heal-skill>
+<app-health-boost-skill *ngIf="(selectedSkill$ | async).name == 'Health Boost'"></app-health-boost-skill>
+<app-knockback-skill *ngIf="(selectedSkill$ | async).name == 'Knockback'"></app-knockback-skill>
+<app-lightning-skill *ngIf="(selectedSkill$ | async).name == 'Lightning'"></app-lightning-skill>
+<app-pickup-skill *ngIf="(selectedSkill$ | async).name == 'Pickup'"></app-pickup-skill>
+<app-poison-skill *ngIf="(selectedSkill$ | async).name == 'Poison'"></app-poison-skill>
+<app-ranged-skill *ngIf="(selectedSkill$ | async).name == 'Ranged'"></app-ranged-skill>
+<app-ride-skill *ngIf="(selectedSkill$ | async).name == 'Ride'"></app-ride-skill>
+<app-shield-skill *ngIf="(selectedSkill$ | async).name == 'Shield'"></app-shield-skill>
+<app-slow-skill *ngIf="(selectedSkill$ | async).name == 'Slow'"></app-slow-skill>
+<app-sprint-skill *ngIf="(selectedSkill$ | async).name == 'Sprint'"></app-sprint-skill>
+<app-stomp-skill *ngIf="(selectedSkill$ | async).name == 'Stomp'"></app-stomp-skill>
+<app-thorns-skill *ngIf="(selectedSkill$ | async).name == 'Thorns'"></app-thorns-skill>
+<app-wither-skill *ngIf="(selectedSkill$ | async).name == 'Wither'"></app-wither-skill>
